--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-*{/*Universal selector: this applies to everything*/
+* {
+  /*Universal selector: this applies to everything*/
 
   box-sizing: border-box;
 }
-body{
-  font-family: 'Roboto', sans-serif;
+body {
+  background-color: #ecf0f1;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-
+}
+img {
+  max-width: 100%;
 }
