--- a/style.css
+++ b/style.css
@@ -18,3 +18,50 @@ body {
 img {
   max-width: 100%;
 }
+
+.card {
+  width: 25rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 5px 10px grey;
+  overflow: hidden;
+}
+.card-header {
+  height: 15rem;
+}
+.card-header .img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.card-content {
+  background-color: #fff;
+  padding: 2rem;
+}
+.card-title {
+  height: 1.5rem;
+  margin: 0.8rem;
+}
+.card-desc {
+  color: #777;
+  margin: 0.8rem;
+}
+.author {
+  display: flex;
+}
+.profile-img {
+  border-radius: 50%;
+  height: 3rem;
+  width: 3rem;
+  overflow: hidden;
+}
+.author-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 1rem;
+  width: 7.5rem;
+}
+.author-info small {
+  color: #aaa;
+  margin: 0.3rem;
+}
